5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1582_1330.log
== TEST (2019-03-23 11:28:44) 
-- CODE:
print round(41.6)
-- ERROR:
File "XXXX", line 1
    print round(41.6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:29:54) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:29:59) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.163101
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:30:14) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.154264
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:30:17) 
-- CODE:
print(41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:30:50) 
-- CODE:
print(41.66)
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:30:56) 
-- CODE:
print(41.66)
round(41.66)
-- EXECUTION TIME:
0.200578
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:31:11) 
-- CODE:
print(41.66)
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:31:21) 
-- CODE:

round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:31:24) 
-- CODE:

round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:32:25) 
-- CODE:
print(round)
round(41.66)

-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:32:36) 
-- CODE:
print("round")
round(41.66)

-- OUTPUT:
round
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:33:49) 
-- CODE:
print(41.66)
round(41,2)

-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:34:00) 
-- CODE:
print(41.66)
round(41,2)

-- EXECUTION TIME:
0.211428
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:39:13) 
-- CODE:
print(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:39:18) 
-- CODE:
print(41.66)


-- EXECUTION TIME:
0.185686
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:41:29) 
-- CODE:
float x=41.6666
round(x,2)
print(x)


-- ERROR:
File "XXXX", line 1
    float x=41.6666
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:42:51) 
-- CODE:
x = float(input("x"))
round(x,2)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:43:30) 
-- CODE:
x = float(input("digite valor de x"))
round(x,2)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(input())
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:44:06) 
-- CODE:
x = float(input(41.6666))
round(x,2)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(input(41.6666))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:44:44) 
-- CODE:
x = float(input(round(41.6666,2)))
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(input(round(41.6666,2)))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:44:51) 
-- CODE:
x = float(input(round(41.6666,2)))
print(x)


-- EXECUTION TIME:
0.165781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    x = float(input(round(41.6666,2)))
ValueError: could not convert string to float: 'xxx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:45:05) 
-- CODE:
x = float(input(round(41.6666,2)))
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(input(round(41.6666,2)))
ValueError: could not convert string to float: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:08:22) 
-- CODE:

print(round((250/6), 2))


-- EXECUTION TIME:
0.214139
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
